expose_kube-dash.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kube-dash
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: kube-dash.k8s.example.org
    http:
      paths:
      - backend:
          serviceName: kubernetes-dashboard
          servicePort: 80
