grafana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana-dash
  namespace: grafana
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: grafana-dash.minikube
    http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: 80
