prometheus-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus
  namespace: prometheus
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - host: prometheus-ui.minikube
  - http:
      paths:
      - backend:
          serviceName: prometheus-server
          servicePort: 9090
        path: /prometheus
      - backend:
          serviceName: prometheus-alertmanager
          servicePort: 9093
        path: /alertmanager
      - backend:
          serviceName: prometheus-pushgateway
          servicePort: 9091
        path: /pushgateway
