prometheus-web-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus-dash
  namespace: prometheus
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: prometheus-dash.minikube
    http:
      paths:
      - backend:
          serviceName: prometheus-server
          servicePort: 80
